Apply global style for scrollbar; fix some sizes for relics

--- a/src/core/ui/Overlay.module.css
+++ b/src/core/ui/Overlay.module.css
@@ -14,7 +14,6 @@
 
 .overflow-auto {
   overflow: auto;
-  scrollbar-color: #222 #888;
   scrollbar-width: thin;
 }
 
