--- a/src/entities/agenda/ui/__old_agendas/Agendas.module.css
+++ b/src/entities/agenda/ui/__old_agendas/Agendas.module.css
@@ -3,7 +3,6 @@
   height: 280px;
   overflow-y: auto;
   overflow-x: hidden;
-  scrollbar-color: #222 #888;
   scrollbar-width: thin;
 }
 
