--- a/src/features/relic/gameplay/GameplayCompactItem.module.css
+++ b/src/features/relic/gameplay/GameplayCompactItem.module.css
@@ -1,7 +1,7 @@
 .main {
   margin: 0;
   position: relative;
-  width: 234px;
+  width: 228px;
   -webkit-user-select: none;
   user-select: none;
 }
