--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,20 @@
 
 html {
   font-family: "Noto Sans JP", sans-serif;
+  /* Firefox */
+  scrollbar-color: #222 #888;
+}
+/* Chrome, Edge, Safari */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #222;
 }
 
 body {
